a few final fixes spacing and cropping etc..

--- a/app/themes/commongood/scss/commongood/_screen.scss
+++ b/app/themes/commongood/scss/commongood/_screen.scss
@@ -58,6 +58,10 @@ html {
 	margin-bottom:0;
 }
 
+.video__meta {
+	margin-left:-$base-spacing-unit !important;
+}
+
 /* edges 
 -----------------------------------------------------------------------------*/
 
@@ -87,7 +91,7 @@ body {
 }
 
 .flex-video.widescreen {
-	padding-bottom: 56.4%;
+	padding-bottom: 56.3%;
 }
 
 
